# g-books

./: README.md  TODO.md  testdata.md  修改.md
TODO/: TODO.md  後端功能.md
UI_FIX/: UI_FIX.md
data2/: 幾個網站資料.docx
g_books/: .gitignore  APP_TEST.md  PAGES.md  README.md  pubspec.yaml
g_books/android/app/: build.gradle.kts
g_books/lib/: 1beginning.dart  2grouping.dart  3heritage_selection.dart  4heritage_home.dart  app.dart  main.dart
g_books/lib/config/: app_config.dart
g_books/lib/core/: account_id.dart  format.dart
g_books/lib/data/: component_data.dart  heritage_data.dart  info_repository.dart  map_cell_data.dart  mock_data.dart  slot_data.dart
g_books/lib/services/: account_service.dart  api_client.dart  api_game_state_service.dart  avatar_service.dart  collection_progress_service.dart  course_session_store.dart  fight_service.dart  game_state_service.dart  heritage_config_service.dart  heritage_sync_service.dart  question_import.dart  quiz_service.dart  teacher_service.dart
g_books/lib/state/: app_state.dart  heritage_board_controller.dart
g_books/test/: question_import_test.dart  widget_test.dart
g_books/web/: index.html  manifest.json
gb_api/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
gb_api/cmd/stt/: main.go
gb_api/nginx/: gen-certs.ps1  gen-certs.sh
gb_api/postgres/: init.sql
gb_api/taigi_stt/: .gitignore  README.md  app.py  pyproject.toml
intro_assets/: quest m.xlsx  quest.csv
seed/: building_beigang.json  seed.py  seed_questions.py  students.csv
seed/quest/: quest.csv
(+136 files in other folders)
